[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/misc/grass.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Objects/Grass/Podunk/0.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Middle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Middle"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Left"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Right"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = Vector2( 0, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachine" id=14]
states/Idle/node = SubResource( 7 )
states/Idle/position = Vector2( 315, 68.3333 )
states/Ruffle/node = SubResource( 11 )
states/Ruffle/position = Vector2( 519, 68.7778 )
transitions = [ "Idle", "Ruffle", SubResource( 12 ), "Ruffle", "Idle", SubResource( 13 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[node name="Grass" type="Area2D"]
position = Vector2( 0, -2 )
collision_layer = 2816
collision_mask = 256
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 11 )
texture = ExtResource( 2 )
offset = Vector2( 0, -12 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Left = SubResource( 3 )
anims/Middle = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Right = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 15 )
parameters/Ruffle/blend_position = Vector2( -0.999365, 0.00903606 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Grass_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Grass_body_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_Grass_tree_exiting"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
